Portfolio section changed

--- a/scss/layout/_masthead.scss
+++ b/scss/layout/_masthead.scss
@@ -2,8 +2,8 @@
 header.masthead {
   text-align: center;
   color: white;
-  // background-image: url('../img/header-bg.jpg');
-  background-color: #3c454d;
+  background-image: url('../img/header-bg.png');
+  // background-color: #3c454d;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
