--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -43,7 +43,7 @@
     .portfolio-caption {
       max-width: 400px;
       margin: 0 auto;
-      padding: 0 25px;
+      padding: 25px;
       text-align: center;
       background-color: $white;
       h4 {
